// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive Operators E2E tests when creating a new dive operator will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "name",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "slug",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "description",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "address",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "phone",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_string",
      "message": "Invalid email",
      "path": [
        "email",
      ],
      "validation": "email",
    },
    {
      "code": "invalid_string",
      "message": "Invalid url",
      "path": [
        "website",
      ],
      "validation": "url",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "gps",
        "lat",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "gps",
        "lon",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "socials",
        "facebook",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "socials",
        "twitter",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "socials",
        "instagram",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "socials",
        "tiktok",
      ],
      "received": "boolean",
    },
  ],
}
`;

exports[`Dive Operators E2E tests when creating a new dive operator will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "name",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "slug",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "description",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "address",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Dive Operators E2E tests when retrieving a single dive operator will retrieve the indicated dive operator 1`] = `
{
  "address": "41517 Major Passage Apt. 411, Fort Richmondfield, TX, 79629",
  "banner": "https://loremflickr.com/1024/256?lock=3805698026635264",
  "createdAt": "2020-05-15T15:20:03.508Z",
  "description": "Adsum deporto tolero turbo suppellex decipio demoror arma. Comedo magni territo. Suasoria vacuus attero cavus vinitor vilis suppono abduco subito.
Ustilo bos bellum somniculosus apto. Caecus vulpes aggredior decretum. Alioqui beneficium depromo theatrum sit eligendi nemo voro sto.",
  "email": "Romaine_Hayes@hotmail.com",
  "gps": {
    "lat": 81.1105,
    "lon": 124.5789,
  },
  "id": "f0a30901-0fb7-407c-8000-b7f94cca9dd8",
  "logo": "https://loremflickr.com/128/128?lock=3255818159915008",
  "name": "kaleidoscopic, gruesome raven",
  "owner": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "phone": "638.449.1535 x7128",
  "slug": "kaleidoscopic-gruesome-raven",
  "socials": {
    "facebook": "Ricky_Hane47",
    "instagram": "Brandyn.Corwin",
    "tiktok": "Giuseppe9",
    "twitter": "Hettie10",
    "youtube": "Nichole.Jerde",
  },
  "updatedAt": "2024-02-15T08:13:06.429Z",
  "verified": false,
  "website": "https://ethical-chime.name",
}
`;

exports[`Dive Operators E2E tests when searching dive operators will perform a basic search with default parameters 1`] = `
{
  "address": "70866 Rosalyn Station Apt. 806, Abbottberg, WV, 14380",
  "banner": "https://picsum.photos/seed/oxFsUDV3/1024/256",
  "createdAt": "2024-04-03T16:50:41.109Z",
  "description": "Curriculum laudantium conor sint sollicito advenio totidem subvenio ut. Dedico statim arceo audax vomer tamisium decet testimonium. Vestigium cur voro repellendus ceno ea uredo taceo sponte synagoga.
Thesis absconditus coniecto pectus. Dignissimos accusamus debeo caecus tamquam thesaurus admiratio aduro pauper. Delicate quo sophismata asperiores porro stella tenus utor admoneo aggero.",
  "email": "Theresia37@yahoo.com",
  "gps": {
    "lat": -57.2048,
    "lon": 124.431,
  },
  "id": "dc7d8eb8-9cd8-460c-8df2-6a6cea3853df",
  "logo": "https://picsum.photos/seed/4S4T5rU/128/128",
  "name": "accurate, shocking troop",
  "owner": {
    "accountTier": 0,
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/29.jpg",
    "location": "El Centro",
    "logBookSharing": "private",
    "memberSince": "2022-12-25T01:34:37.361Z",
    "name": "Bobby Funk",
    "userId": "94584695-a41a-4738-b3d6-c61e94d6e87e",
    "username": "Joesph_Morar",
  },
  "phone": "1-653-687-2112 x788",
  "slug": "accurate-shocking-troop",
  "socials": {
    "facebook": "Eli_Sauer51",
    "instagram": "Carlos25",
    "tiktok": "Keanu_Schinner36",
    "twitter": "Presley.Hills93",
    "youtube": "Theodora37",
  },
  "updatedAt": "2024-03-17T10:05:20.257Z",
  "verified": true,
  "website": "https://tough-presence.org/",
}
`;

exports[`Dive Operators E2E tests when searching dive operators will perform a basic search with default parameters 2`] = `
[
  "accurate, shocking troop",
  "aching, envious boundary",
  "adept, reflecting hostess",
  "advanced, flimsy bore",
  "aged, messy epithelium",
  "alert, gleaming ignorance",
  "amused, shady tooth",
  "angelic, tender milepost",
  "athletic, deafening spiritual",
  "authentic, gleeful interloper",
  "avaricious, squeaky pinto",
  "awkward, blaring dandelion",
  "beneficial, past bather",
  "black-and-white, early philanthropy",
  "both, shimmering spleen",
  "broken, glum beastie",
  "buttery, dearest mineral",
  "buzzing, prestigious source",
  "cheerful, striped gather",
  "clear, bossy light",
  "comfortable, unused scratch",
  "composed, primary waist",
  "crafty, natural resolve",
  "creative, woeful buggy",
  "creepy, worse symbol",
  "cultivated, idolized muscat",
  "cumbersome, grumpy atom",
  "damp, high ship",
  "daring, fortunate chive",
  "decimal, rewarding politics",
  "defiant, jagged tavern",
  "determined, any stinger",
  "determined, fake CD",
  "difficult, excitable thousand",
  "dirty, cooperative notion",
  "dismal, mild mosque",
  "dismal, shocked curtailment",
  "dutiful, worthwhile fugato",
  "earnest, sharp tan",
  "edible, thorough pride",
  "elaborate, wooden soundness",
  "elliptical, quick address",
  "embarrassed, angry doubt",
  "enlightened, starchy delight",
  "equal, favorable spokesman",
  "equatorial, favorite sermon",
  "excellent, incomplete environment",
  "experienced, mild siege",
  "extraneous, dry crewmen",
  "faithful, curvy playwright",
]
`;

exports[`Dive Operators E2E tests when searching dive operators will perform a more complex search with query parameters 1`] = `
{
  "operators": [
    {
      "address": "27893 E Main Street Suite 198, Evaworth, DE, 43922",
      "banner": "https://loremflickr.com/1024/256?lock=2398549729869824",
      "createdAt": "2022-03-04T10:50:14.072Z",
      "description": "Numquam patria bestia ambulo. Praesentium utique sum theca aliquam quos. Voluptatum vigor articulus allatus vis ea modi.
Suscipio adulatio nihil deripio debeo deserunt agnosco. Crebro torqueo tui stultus appono curis somniculosus tabula. Vitium iusto aspernatur colligo.",
      "email": "Granville_Schumm50@yahoo.com",
      "gps": {
        "lat": 63.5309,
        "lon": 16.1907,
      },
      "id": "64ac7a2e-1072-4848-a688-3f6767fd6bc4",
      "logo": "https://loremflickr.com/128/128?lock=3294779878146048",
      "name": "loving, burdensome pump",
      "owner": {
        "accountTier": 0,
        "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1003.jpg",
        "location": "Milford",
        "logBookSharing": "private",
        "memberSince": "2022-06-20T01:36:16.997Z",
        "name": "Ruth Botsford V",
        "userId": "3d43ad38-0076-49f7-8f85-8506f7fe6d49",
        "username": "Winona.Doyle",
      },
      "phone": "906.952.0278 x76352",
      "slug": "loving-burdensome-pump",
      "socials": {
        "facebook": "Vernon_Cruickshank42",
        "instagram": "Bernardo.Ferry",
        "tiktok": "Amaya5",
        "twitter": "Laney_Cummings",
        "youtube": "Kyle.Mraz",
      },
      "updatedAt": "2024-03-02T19:42:05.391Z",
      "verified": true,
      "website": "https://delectable-identity.biz",
    },
  ],
  "totalCount": 1,
}
`;

exports[`Dive Operators E2E tests when searching dive operators will return a 400 response if the query string is invalid 1`] = `
{
  "issues": [
    {
      "code": "custom",
      "message": "Must be in the format "<lat>,<lon>"",
      "path": [
        "location",
        "location",
      ],
    },
    {
      "code": "custom",
      "message": "Array must contain at least 2 element(s)",
      "path": [
        "location",
        "location",
      ],
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "radius",
      ],
      "received": "nan",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
  ],
}
`;

exports[`Dive Operators E2E tests when transferring ownership of a dive operator will allow an admin to transfer ownership 1`] = `
{
  "address": "41517 Major Passage Apt. 411, Fort Richmondfield, TX, 79629",
  "banner": "https://loremflickr.com/1024/256?lock=3805698026635264",
  "createdAt": "2020-05-15T15:20:03.508Z",
  "description": "Adsum deporto tolero turbo suppellex decipio demoror arma. Comedo magni territo. Suasoria vacuus attero cavus vinitor vilis suppono abduco subito.
Ustilo bos bellum somniculosus apto. Caecus vulpes aggredior decretum. Alioqui beneficium depromo theatrum sit eligendi nemo voro sto.",
  "email": "Romaine_Hayes@hotmail.com",
  "gps": {
    "lat": 81.1105,
    "lon": 124.5789,
  },
  "id": "f0a30901-0fb7-407c-8000-b7f94cca9dd8",
  "logo": "https://loremflickr.com/128/128?lock=3255818159915008",
  "name": "kaleidoscopic, gruesome raven",
  "owner": {
    "accountTier": 0,
    "avatar": "https://example.com/avatar.png",
    "location": "Vancouver, BC",
    "logBookSharing": "public",
    "memberSince": "2024-07-31T13:00:45.000Z",
    "name": "Jane Other",
    "userId": "ca5f6ec9-b9a5-4e9a-8a34-9c27a44d94f8",
    "username": "Jane.Other",
  },
  "phone": "638.449.1535 x7128",
  "slug": "kaleidoscopic-gruesome-raven",
  "socials": {
    "facebook": "Ricky_Hane47",
    "instagram": "Brandyn.Corwin",
    "tiktok": "Giuseppe9",
    "twitter": "Hettie10",
    "youtube": "Nichole.Jerde",
  },
  "updatedAt": 1970-01-01T00:00:00.000Z,
  "verified": false,
  "website": "https://ethical-chime.name",
}
`;

exports[`Dive Operators E2E tests when transferring ownership of a dive operator will allow the operator owner to transfer ownership 1`] = `
{
  "address": "41517 Major Passage Apt. 411, Fort Richmondfield, TX, 79629",
  "banner": "https://loremflickr.com/1024/256?lock=3805698026635264",
  "createdAt": "2020-05-15T15:20:03.508Z",
  "description": "Adsum deporto tolero turbo suppellex decipio demoror arma. Comedo magni territo. Suasoria vacuus attero cavus vinitor vilis suppono abduco subito.
Ustilo bos bellum somniculosus apto. Caecus vulpes aggredior decretum. Alioqui beneficium depromo theatrum sit eligendi nemo voro sto.",
  "email": "Romaine_Hayes@hotmail.com",
  "gps": {
    "lat": 81.1105,
    "lon": 124.5789,
  },
  "id": "f0a30901-0fb7-407c-8000-b7f94cca9dd8",
  "logo": "https://loremflickr.com/128/128?lock=3255818159915008",
  "name": "kaleidoscopic, gruesome raven",
  "owner": {
    "accountTier": 0,
    "avatar": "https://example.com/avatar.png",
    "location": "Vancouver, BC",
    "logBookSharing": "public",
    "memberSince": "2024-07-31T13:00:45.000Z",
    "name": "Jane Other",
    "userId": "ca5f6ec9-b9a5-4e9a-8a34-9c27a44d94f8",
    "username": "Jane.Other",
  },
  "phone": "638.449.1535 x7128",
  "slug": "kaleidoscopic-gruesome-raven",
  "socials": {
    "facebook": "Ricky_Hane47",
    "instagram": "Brandyn.Corwin",
    "tiktok": "Giuseppe9",
    "twitter": "Hettie10",
    "youtube": "Nichole.Jerde",
  },
  "updatedAt": 1970-01-01T00:00:00.000Z,
  "verified": false,
  "website": "https://ethical-chime.name",
}
`;

exports[`Dive Operators E2E tests when updating a dive operator will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "name",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "slug",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "description",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "address",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "phone",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_string",
      "message": "Invalid email",
      "path": [
        "email",
      ],
      "validation": "email",
    },
    {
      "code": "invalid_string",
      "message": "Invalid url",
      "path": [
        "website",
      ],
      "validation": "url",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "gps",
        "lat",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "gps",
        "lon",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "socials",
        "facebook",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "socials",
        "twitter",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "socials",
        "instagram",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "socials",
        "tiktok",
      ],
      "received": "boolean",
    },
  ],
}
`;

exports[`Dive Operators E2E tests when updating a dive operator will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "name",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "slug",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "description",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "address",
      ],
      "received": "undefined",
    },
  ],
}
`;
